# asimov-readwise-module

./: CHANGES.md  Cargo.toml  README.md
.asimov/: module.yaml
src/: jq.rs  lib.rs  output.rs
src/api/: mod.rs  readwise.rs  types.rs
src/api/types/: mod.rs  types.rs
src/fetcher/: main.rs
src/importer/: main.rs
src/jq/: books.jq  readwise.jq  tags.jq
src/providers/: mod.rs  provider.rs  readwise.rs  types.rs
tests/: api_tests.rs  jq_tests.rs
