# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-readwise-module"
version = "0.0.0"
authors = ["ASIMOV Community"]
edition = "2024"
#rust-version = "1.85"
description = "ASIMOV module."
#documentation = "https://docs.rs/asimov-template-module"
readme = true
homepage = "https://github.com/asimov-modules"
repository = "https://github.com/asimov-modules/asimov-template-module"
license = "Unlicense"
keywords = ["asimov-module", "asimov", "ai"]
categories = ["command-line-utilities", "text-processing"]              # TODO
publish = false

[features]
default = ["all", "cli", "std"]
all = ["pretty", "tracing"]
cli = ["asimov-module/cli", "std", "dep:clap", "dep:clientele"]
std = ["asimov-module/std", "clap?/std", "clientele?/std"]
unstable = []

# Optional features:
pretty = []
tracing = ["asimov-module/tracing", "clientele?/tracing"]

[dependencies]
asimov-module = { version = "25.0.0-dev.19", default-features = false }
jq = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tracing-subscriber = "0.3"
tokio = { version = "1.0", features = ["full"] }
colored_json = "2.1"

# Optional integrations:
clap = { version = "4.5", default-features = false, features = [
    "std",
], optional = true }
clientele = { version = "0.3.8", default-features = false, features = [
    "clap",
    "std",
], optional = true }

[profile.release]
opt-level = "z"
strip = true
lto = "thin"

[[bin]]
name = "asimov-readwise-fetcher"
path = "src/fetcher/main.rs"
required-features = ["cli"]
